<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Online Voting</string>

    <string name="bold" tools:ignore="ReferenceType">@font/lato_bold</string>
    <string name="light" tools:ignore="ReferenceType">@font/lato_light</string>
    <string name="regular" tools:ignore="ReferenceType">@font/lato_regular</string>

    <!-- Strings Used in Multiple Pages -->
    <string name="log_out">Log Out</string>
    <string name="voter_id">Voter ID</string>
    <string name="mobile_number">Mobile Number</string>

    <!-- Strings Used in Start Page -->
    <string name="welcome">Welcome</string>
    <string name="about_application"> The word VOTE means to choose from a list, to elect or to determine.
The main goal of voting (in a scenario involving the citizens of a given country) is
to come up with leaders of the people’s choice. Most countries, India not an
exception have problems when it comes to voting. Some of the problems involved
include ridging votes during election, insecure or inaccessible polling stations,
inadequate polling materials and also inexperienced personnel.
    </string>

    <!-- Strings Used in Authentication -->
    <string name="online_voting_application">Online Voting Application</string>
    <string name="voting_quote">It is not enough to just want change … You have to go and make change by voting.</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="show">Show</string>
    <string name="login_link">Already Registered? Click here to Log In.</string>
    <string name="registered_link">Not yet Registered? Click here to Register.</string>
    <string name="complete_profile">Complete Your Profile</string>
    <string name="submit">Submit</string>
    <string name="profile_picture">Add Profile Picture</string>
    <string name="add_voter_id_picture">Add Voter ID Picture</string>

    <!-- Strings Used in bottom navigation -->
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="election">Election</string>
    <string name="profile">Profile</string>

    <!-- Strings Used in profile fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Hide</string>
    <string name="profile_completed">Profile Completed</string>
    <string name="account_verified">Account Verified</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Strings Used in Admin Home Page -->
    <string name="verify_voters">Verify Voters</string>
    <string name="approve_candidates">Approve Candidates</string>
    <string name="upload_notice">Upload Notice</string>
    <string name="delete_notice">Delete Notice</string>
    <string name="set_election">Set Election</string>
    <string name="view_result">View Result</string>

    <!-- Strings Used in User Notice Fragment -->
    <string name="no_new_notice">No New Notice</string>

    <!-- Strings Used in Admin Approve Voters Page -->
    <string name="approve">Approve</string>
    <string name="apply_as_candidate">Apply As Candidate</string>

    <!-- Strings Used in Admin View Candidate Page -->
    <string name="delete">Delete</string>

    <!-- Strings Used in User Apply Candidate Page -->
    <string name="add_party_logo">Add Party Logo</string>
    <string name="set_election_date">Set Election Date</string>
    <string name="election_date">Election Date</string>

    <!-- Strings Used in Admin Set Election Page -->
    <string name="click_here_and_set_election">Click here and Set Election</string>

    <!-- Strings Used in User Election Fragment -->
    <string name="vote">Vote</string>
    <string name="no_election_at_this_time">No Election Currently</string>
    <string name="click_here_to_delete_election">Click Here To Delete Election</string>

</resources>