<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".authentication.VoterCompleteProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_arrow_back"
                android:layout_gravity="center_vertical"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/complete_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/add_profile_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_picture"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>

        <ImageView
            android:id="@+id/voter_id_card_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/voter_id"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/add_voter_id_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_voter_id_picture"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_voter_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/voter_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>