<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminHomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/add_notification"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_green"
                            android:padding="15dp"
                            android:src="@drawable/ic_notice" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/upload_notice"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/delete_notice"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_red"
                            android:padding="15dp"
                            android:src="@drawable/ic_delete" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/delete_notice"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/verify_voters"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_purple"
                            android:padding="15dp"
                            android:src="@drawable/ic_voters" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/verify_voters"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/approve_candidate"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_yellow"
                            android:padding="15dp"
                            android:src="@drawable/ic_approve_candidates" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/approve_candidates"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/set_election"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_pink"
                            android:padding="15dp"
                            android:src="@drawable/ic_baseline_app_registration_24" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/set_election"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/delete_election"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_red"
                            android:padding="15dp"
                            android:src="@drawable/ic_delete" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="Delete Election"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <com.google.android.material.card.MaterialCardView-->
<!--                    android:id="@+id/xxxx"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="170dp"-->
<!--                    android:layout_margin="10dp"-->
<!--                    app:cardElevation="5dp">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="center"-->
<!--                        android:orientation="vertical">-->

<!--                        <ImageView-->
<!--                            android:layout_width="84dp"-->
<!--                            android:layout_height="84dp"-->
<!--                            android:background="@drawable/circle_pink"-->
<!--                            android:padding="15dp"-->
<!--                            android:src="@drawable/ic_baseline_app_registration_24" />-->

<!--                        <View-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="1dp"-->
<!--                            android:layout_marginTop="15dp"-->
<!--                            android:background="@color/light_grey" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginTop="10dp"-->
<!--                            android:padding="5dp"-->
<!--                            android:text="@string/set_election"-->
<!--                            android:textColor="@color/text_color"-->
<!--                            android:textStyle="bold" />-->

<!--                    </LinearLayout>-->
<!--                </com.google.android.material.card.MaterialCardView>-->

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/view_results"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:background="@drawable/circle_brown"
                            android:padding="15dp"
                            android:src="@drawable/ic_baseline_bar_chart_24" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/light_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="5dp"
                            android:text="@string/view_result"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_danger"
                android:text="@string/log_out"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>